--- a/Portfolio/HTML/Photography.html
+++ b/Portfolio/HTML/Photography.html
@@ -10,15 +10,15 @@
     
     <div class="cmra">
         <h1>Some Recent Work</h1>
- <img src="./images/ghk.jpg" alt="Kids Playing" class="phto">
- <img src="./images/om1.jpg" alt="Triangle with Hand" class="phto">  
- <img src="./images/oml1.jpg" alt="Man Standing with Face Covered" class="phto">  
- <img src="./images/jkl.jpg" alt="Three men" class="phto">  
- <img src="./images/bbb.jpg" alt="Flower" class="phto">  
- <img src="./images/ccc.jpg" alt="Hands" class="phto">  
- <img src="./images/ddd.jpg" alt="Mouth" class="phto">  
- <img src="./images/eee.jpg" alt="Illusion" class="phto">  
- <img src="./images/flower.jpg" alt="light" class="phto">  
+<div class="phto"> <img src="./images/ghk.jpg" alt="Kids Playing" > </div>
+<div class="phto"> <img src="./images/om1.jpg" alt="Triangle with Hand" >  </div>
+<div class="phto"> <img src="./images/oml1.jpg" alt="Man Standing with Face Covered" > </div> 
+<div class="phto"> <img src="./images/jkl.jpg" alt="Three men">  </div>
+<div class="phto"> <img src="./images/bbb.jpg" alt="Flower" >  </div>
+<div class="phto"> <img src="./images/ccc.jpg" alt="Hands" >  </div>
+<div class="phto"> <img src="./images/ddd.jpg" alt="Mouth" >  </div>
+<div class="phto"> <img src="./images/eee.jpg" alt="Illusion" >  </div>
+<div class="phto"> <img src="./images/flower.jpg" alt="light" >  </div>
  
 </div>
 </body>
