--- a/Portfolio/HTML/index.html
+++ b/Portfolio/HTML/index.html
@@ -257,6 +257,7 @@
                 <input type="submit" value="Submit">
 
              </form>-->
+             </div>
         </div>
     </section>
 
